Fix for Homepage "Subscribe" mis-alignment

--- a/themes/css/component.css
+++ b/themes/css/component.css
@@ -377,7 +377,7 @@ h1.logo a {
 .socials em { font-size:11px; font-weight:normal }
 .socials p { font-weight:bold }
 
-.subscribe { margin-top:-15px }
+.subscribe h3 { margin-top:0px }
 
 a.subscribe {
     font-size:15px;
